
Release 2.7.3 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HDFS-8647. Abstract BlockManager's rack policy into BlockPlacementPolicy.
    (Brahma Reddy Battula via mingma)

    HDFS-7163. WebHdfsFileSystem should retry reads according to the configured
    retry policy. (Eric Payne via kihwal)

    HDFS-9574. Reduce client failures during datanode restart (kihwal)

  OPTIMIZATIONS

  BUG FIXES

    HDFS-9289. Make DataStreamer#block thread safe and verify genStamp in
    commitBlock. (Chang Li via kihwal)

    HDFS-4937. ReplicationMonitor can infinite-loop in 
    BlockPlacementPolicyDefault#chooseRandom(). (kihwal)

    HDFS-9383. TestByteArrayManager#testByteArrayManager fails.
    (szetszwo via kihwal)

    HDFS-6481. DatanodeManager#getDatanodeStorageInfos() should check the
    length of storageIDs. (szetszwo via Arpit Agarwal)

    HDFS-9313. Possible NullPointerException in BlockManager if no excess
    replica can be chosen. (mingma)

    HDFS-9314. Improve BlockPlacementPolicyDefault's picking of excess
    replicas. (Xiao Chen via zhz)

    HDFS-9516. Truncate file fails with data dirs on multiple disks.
    (Plamen Jeliazkov via shv)

    HDFS-9533. seen_txid in the shared edits directory is modified during
    bootstrapping (kihwal)

    HDFS-9505. HDFS Architecture documentation needs to be refreshed.
    (Masatake Iwasaki via aajisaka)

    HDFS-8914. Document HA support in the HDFS HdfsDesign.md.
    (Lars Francke via wheat9)

Release 2.7.2 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HDFS-8659. Block scanner INFO message is spamming logs. (Yongjun Zhang)

    HADOOP-5323. Trash documentation should describe its directory structure and
    configurations. (Weiwei Yang via ozawa)

    HDFS-8099. Change "DFSInputStream has been closed already" message to
    debug log level (Charles Lamb via Colin P. McCabe)

    HDFS-9221. HdfsServerConstants#ReplicaState#getState should avoid calling